force-app/main/default/objects/Activity_Assignment__c/Activity_Assignment__c.object-meta.xml
<CustomObject>
    <label>Activity Assignment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Activity Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>