force-app/main/default/objects/Activity_Assignment__c/fields/Actual_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Minutes__c</fullName>
    <label>Actual Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>