force-app/main/default/objects/Activity_Assignment__c/fields/Onboarding_Activity__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onboarding Activity</label>
    <referenceTo>Onboarding_Activity__c</referenceTo>
    <relationshipLabel>Activity Assignments</relationshipLabel>
    <relationshipName>Onboarding_Activity_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>