force-app/main/default/objects/Activity_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Minutes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Employee__c</columns>
    <columns>Onboarding_Activity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>